--- a/addons/l10n_fr_fec/i18n/fr.po
+++ b/addons/l10n_fr_fec/i18n/fr.po
@@ -7,13 +7,15 @@ msgstr ""
 "Project-Id-Version: Odoo Server 14.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-27 14:45+0000\n"
-"PO-Revision-Date: 2021-10-27 14:45+0000\n"
+"PO-Revision-Date: 2022-01-27 00:25+0100\n"
 "Last-Translator: Rémi CAZENAVE <remi@le-filament.com>, 2021\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: \n"
+"Language: fr\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. module: l10n_fr_fec
 #: model_terms:ir.ui.view,arch_db:l10n_fr_fec.account_fr_fec_view
@@ -57,6 +59,7 @@ msgstr ""
 
 #. module: l10n_fr_fec
 #: model_terms:ir.ui.view,arch_db:l10n_fr_fec.account_fr_fec_view
+#: view:account.fr.fec:0
 msgid "Cancel"
 msgstr "Annuler"
 
@@ -236,17 +239,14 @@ msgstr ""
 #. module: l10n_fr_fec
 #: model:ir.model.fields.selection,name:l10n_fr_fec.selection__account_fr_fec__export_type__nonofficial
 msgid "Non-official FEC report (posted and unposted entries)"
-msgstr "Rapport FEC non-officiel (avec à la fois les entrées comptabilisées et non comptabilisées)"
+msgstr ""
+"Rapport FEC non-officiel (avec à la fois les entrées comptabilisées et non "
+"comptabilisées)"
 
 #: code:addons/l10n_fr_fec/wizard/fec.py:98
 #, python-format
 msgid "Invalid VAT number for company %s"
 msgstr "Numéro de TVA invalide sur la société %s"
-
-#. module: l10n_fr_fec
-#: view:account.fr.fec:0
-msgid "Cancel"
-msgstr "Annuler"
 
 #. module: l10n_fr_fec
 #: model:ir.model.fields.selection,name:l10n_fr_fec.selection__account_fr_fec__export_type__official
@@ -317,17 +317,17 @@ msgstr "Nous utilisons partner.id"
 #: model_terms:ir.ui.view,arch_db:l10n_fr_fec.account_fr_fec_view
 msgid ""
 "When you download a FEC file, the lock date is set to the end date.\n"
-"                If you want to test the FEC file generation, please tick the test file checkbox."
+"                If you want to test the FEC file generation, please tick the "
+"test file checkbox."
 msgstr ""
-"Quand vous téléchargez un fichier FEC, la date de verrouillage est configurée avec la date de fin.\n
-"                Si vous voulez tester la génération du fichier FEC, cliquez sur la coche Fichier de Test."
 
 #. module: l10n_fr_fec
 #: model_terms:ir.ui.view,arch_db:l10n_fr_fec.account_fr_fec_view
 msgid ""
 "You are in test mode. The FEC file generation will not set the lock date."
 msgstr ""
-"Vous êtes en mode test. La génération du fichier FEC ne configurera la date de verrouillage."
+"Vous êtes en mode test. La génération du fichier FEC ne configurera la date "
+"de verrouillage."
 
 #. module: l10n_fr_fec
 #: code:addons/l10n_fr_fec/wizard/account_fr_fec.py:0
